<?xml version="1.0"?>
<package>
  <name>leddar</name>
  <version>0.1.0</version>
  <description>
      This package provides a ROS interface to control and communicate with
      the Leddar sensors.
  </description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <author email="mr@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export> </export>
</package>
